--- a/projects/integrate/admin/application/functions/public/email/email.component.html
+++ b/projects/integrate/admin/application/functions/public/email/email.component.html
@@ -1,4 +1,4 @@
-<form *ngIf="form" nz-form nzLayout="vertical" id="form" [formGroup]="form" (wpxSubmit)="submit($event)">
+<form nz-form nzLayout="vertical" id="form" [formGroup]="form" (wpxSubmit)="submit($event)">
   <nz-form-item>
     <nz-form-label nzRequired>公共电子邮件服务 SMTP 地址</nz-form-label>
     <nz-form-control
