--- a/projects/integrate/admin/security/policy/ip-list/ip-list.component.html
+++ b/projects/integrate/admin/security/policy/ip-list/ip-list.component.html
@@ -1,7 +1,7 @@
-<form *ngIf="form" nz-form nzLayout="vertical" id="form" [formGroup]="form" (wpxSubmit)="submit($event)">
+<form nz-form nzLayout="vertical" id="form" [formGroup]="form" (wpxSubmit)="submit($event)">
   <nz-form-item>
     <nz-form-label>白名单</nz-form-label>
-    <nz-form-control formArrayName="whitelist">
+    <nz-form-control formArrayName="ip_whitelist">
       <ng-container *ngFor="let x of whitelist?.controls; index as i; first as isFirst">
         <nz-input-group nzCompact [ngStyle]="{ 'margin-top': isFirst ? null : '-1px' }">
           <input style="width: 90%" type="text" nz-input [formControlName]="i" placeholder="请输入 IP 地址" />
@@ -17,7 +17,7 @@
   </nz-form-item>
   <nz-form-item>
     <nz-form-label>黑名单</nz-form-label>
-    <nz-form-control formArrayName="blacklist">
+    <nz-form-control formArrayName="ip_blacklist">
       <ng-container *ngFor="let x of blacklist?.controls; index as i; first as isFirst">
         <nz-input-group nzCompact [ngStyle]="{ 'margin-top': isFirst ? null : '-1px' }">
           <input style="width: 90%" type="text" nz-input [formControlName]="i" placeholder="请输入 IP 地址" />
