--- a/projects/integrate/admin/security/policy/ip-lock/ip-lock.component.html
+++ b/projects/integrate/admin/security/policy/ip-lock/ip-lock.component.html
@@ -1,4 +1,4 @@
-<form *ngIf="form" nz-form nzLayout="vertical" id="form" [formGroup]="form" (wpxSubmit)="submit($event)">
+<form nz-form nzLayout="vertical" id="form" [formGroup]="form" (wpxSubmit)="submit($event)">
   <nz-form-item>
     <nz-form-label nzRequired>非白名单登录失败上限</nz-form-label>
     <nz-form-control
@@ -11,7 +11,7 @@
     >
       <nz-input-number
         style="width: 100%"
-        formControlName="times"
+        formControlName="ip_login_failed_times"
         [nzFormatter]="formatterTimes"
         [nzMin]="1"
         [nzStep]="1"
