--- a/projects/integrate/admin/security/policy/password-expire/password-expire.component.html
+++ b/projects/integrate/admin/security/policy/password-expire/password-expire.component.html
@@ -1,4 +1,4 @@
-<form *ngIf="form" nz-form nzLayout="vertical" id="form" [formGroup]="form" (wpxSubmit)="submit($event)">
+<form nz-form nzLayout="vertical" id="form" [formGroup]="form" (wpxSubmit)="submit($event)">
   <nz-form-item>
     <nz-form-label nzRequired>密码有效期</nz-form-label>
     <nz-form-control
@@ -12,7 +12,7 @@
     >
       <nz-input-number
         style="width: 100%"
-        formControlName="day"
+        formControlName="password_expire"
         [nzFormatter]="formatterTimes"
         [nzMin]="0"
         [nzStep]="1"
