--- a/projects/integrate/admin/security/policy/password-strength/password-strength.component.html
+++ b/projects/integrate/admin/security/policy/password-strength/password-strength.component.html
@@ -1,8 +1,8 @@
-<form *ngIf="form" nz-form nzLayout="vertical" id="form" [formGroup]="form" (wpxSubmit)="submit($event)">
+<form nz-form nzLayout="vertical" id="form" [formGroup]="form" (wpxSubmit)="submit($event)">
   <nz-form-item>
     <nz-form-label nzRequired>密码强度</nz-form-label>
     <nz-form-control>
-      <nz-radio-group formControlName="strength">
+      <nz-radio-group formControlName="password_strength">
         <label nz-radio [nzValue]="0">无限制。</label>
         <label nz-radio [nzValue]="1">需要大写字母和小写字母。</label>
         <label nz-radio [nzValue]="2">需要大写字母、小写字母和数字。</label>
