--- a/projects/integrate/admin/application/factory/manual/manual.component.html
+++ b/projects/integrate/admin/application/factory/manual/manual.component.html
@@ -7,7 +7,7 @@
           将编程组件注册至 wpx 服务，页面将通过唯一标识载入组件
         </nz-list-item-meta-description>
       </nz-list-item-meta>
-      <nz-descriptions nzSize="small" nzBordered [nzColumn]="2">
+      <nz-descriptions style="width: 800px" nzSize="small" nzLayout="vertical" nzBordered [nzColumn]="2">
         <nz-descriptions-item nzTitle="唯一标识">
           {{ page?.manual?.scope ?? '未设置' }}
         </nz-descriptions-item>
@@ -27,12 +27,12 @@
     </nz-list-item>
     <nz-list-item>
       <nz-list-item-meta>
-        <nz-list-item-meta-title><b>权限细粒化</b></nz-list-item-meta-title>
+        <nz-list-item-meta-title><b>权限策略</b></nz-list-item-meta-title>
         <nz-list-item-meta-description>
           资源请求开启严格的访问控制时，需要为页面授权模型策略
         </nz-list-item-meta-description>
       </nz-list-item-meta>
-      <nz-table style="width: 40%" #basicTable [nzData]="policies" [nzHideOnSinglePage]="true">
+      <nz-table style="width: 800px" #basicTable [nzData]="policies" [nzHideOnSinglePage]="true">
         <thead>
           <tr>
             <th nzWidth="200px"><b>模型命名</b></th>
