update: 调整 src.app 结构

--- a/src/app/forget/forget.component.html
+++ b/src/app/forget/forget.component.html
@@ -1,4 +1,4 @@
-<app-stage>
+<app-layout>
   <nz-card class="container">
     <h1>找回密码</h1>
     <nz-steps style="padding: 16px" [nzCurrent]="step" nzProgressDot>
@@ -129,4 +129,4 @@
       </ng-container>
     </ng-container>
   </nz-card>
-</app-stage>
+</app-layout>
