--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-<app-stage>
+<app-layout>
   <nz-card class="container">
     <div class="logo">
       <nz-avatar [nzSize]="100" nzIcon="user"></nz-avatar>
@@ -50,4 +50,4 @@
       </nz-form-item>
     </form>
   </nz-card>
-</app-stage>
+</app-layout>
