--- a/src/app/unauthorize/unauthorize.component.html
+++ b/src/app/unauthorize/unauthorize.component.html
@@ -1,4 +1,4 @@
-<app-stage>
+<app-layout>
   <nz-result
     nzStatus="403"
     nzTitle="403"
@@ -8,4 +8,4 @@
       <button nz-button nzType="primary" routerLink="/login">返回登录</button>
     </div>
   </nz-result>
-</app-stage>
+</app-layout>
