--- a/projects/integrate/dynamic/table/form/form.component.html
+++ b/projects/integrate/dynamic/table/form/form.component.html
@@ -3,8 +3,8 @@
   [wpxFields]="fields"
   [wpxRules]="rules"
   [wpxSubmitHide]="true"
+  [wpxInit]="init"
   [wpxSubmit]="submit"
-  (wpxInit)="formInit($event)"
 ></wpx-form>
 
 <div *nzModalFooter>
