--- a/projects/integrate/nav/nav.component.html
+++ b/projects/integrate/nav/nav.component.html
@@ -1,4 +1,4 @@
-<ul nz-menu nzMode="inline">
+<ul nz-menu nzMode="inline" style="padding-top: 1px">
   <ng-container *ngIf="!!wpx.navs">
     <ng-container *ngTemplateOutlet="nav; context: { $implicit: wpx.navs }"></ng-container>
     <ng-template #nav let-pages>
