update: 内容模型-引用默认值设置

--- a/projects/integrate/admin/application/factory/schema/form/form.component.html
+++ b/projects/integrate/admin/application/factory/schema/form/form.component.html
@@ -131,9 +131,9 @@
                 [nzMode]="option.get('multiple')?.value ? 'tags' : 'default'"
                 nzPlaceHolder="请选择默认值"
               >
-                <!--                <ng-container *ngFor="let x of optionValues.value">-->
-                <!--                  <nz-option [nzLabel]="x.label" [nzValue]="x.value"></nz-option>-->
-                <!--                </ng-container>-->
+                <ng-container *ngFor="let x of referenceValues">
+                  <nz-option [nzLabel]="x.label" [nzValue]="x.value"></nz-option>
+                </ng-container>
               </nz-select>
             </ng-container>
             <ng-container *ngSwitchDefault>
