--- a/projects/integrate/admin/application/functions/tabs/tabs.component.html
+++ b/projects/integrate/admin/application/functions/tabs/tabs.component.html
@@ -8,7 +8,10 @@
         <a *nzTabLink nz-tab-link [routerLink]="['/admin', 'application', 'functions', 'office']"> 企业办公 </a>
       </nz-tab>
       <nz-tab>
-        <a *nzTabLink nz-tab-link [routerLink]="['/admin', 'application', 'functions', 'public']"> 公共配置 </a>
+        <a *nzTabLink nz-tab-link [routerLink]="['/admin', 'application', 'functions', 'email']"> 电子邮件 </a>
+      </nz-tab>
+      <nz-tab>
+        <a *nzTabLink nz-tab-link [routerLink]="['/admin', 'application', 'functions', 'openapi']"> 开放服务 </a>
       </nz-tab>
       <nz-tab>
         <a *nzTabLink nz-tab-link [routerLink]="['/admin', 'application', 'functions', 'schedule']"> 定时调度 </a>
