更新: 工具箱.动态配置

--- a/projects/integrate/admin/admin.component.html
+++ b/projects/integrate/admin/admin.component.html
@@ -14,6 +14,9 @@
             <li nz-menu-item nzMatchRouter [routerLink]="['application', 'monitor']">
               <i nz-icon nzType="monitor"></i> <span>监控</span>
             </li>
+            <li nz-menu-item nzMatchRouter [routerLink]="['application', 'toolbox']">
+              <i nz-icon nzType="medicine-box"></i> <span>工具箱</span>
+            </li>
           </ul>
         </li>
         <li nz-menu-group nzTitle="媒体">
