更新: 工具箱.动态配置

--- a/projects/integrate/admin/application/toolbox/values/form/form.component.html
+++ b/projects/integrate/admin/application/toolbox/values/form/form.component.html
@@ -15,6 +15,7 @@
   <nz-form-item>
     <nz-form-label nzRequired>配置值</nz-form-label>
     <nz-form-control
+      nzExtra="配置值会存储为字符串类型，默认配置请谨慎提交"
       nzHasFeedback
       [nzAutoTips]="{
         default: {
